2008-06-30  Martyn Russell  <martyn@imendio.com>

	* data/modules/applications.module: Changed the location to
	$prefix/share/applications for now, it was just $prefix/share,
	there are too many files there and we need the appropriate ignore
	patterns in place before we can really do this.
	
	* src/trackerd/tracker-main.[ch]: Removed the HAL and Crawler from
	the Tracker struct. Now they are created and stored in the
	TrackerProcessor object.
	
	* src/trackerd/tracker-process.[ch]: Added the initial workings
	from the indexer code which Carlos wrote and copied over to the
	daemon to start iterating all locations according to the module
	config. 

2008-06-27  Ivan Frade  <ivan.frade@nokia.com>

	* tests/libtracker-common/tracker-type-utils.c:
	(string_to_date): Using GDate instead of time_t to compare the
	result without timezone.
	
2008-06-27  Ivan Frade  <ivan.frade@nokia.com>

	* tests/**: Added license in .c/.h files.
	
2008-06-27  Philip Van Hoof  <pvanhoof@gnome.org>

	* svn merge -r 1769:1798 ../xesam-support

2008-06-27  Carlos Garnacho  <carlos@imendio.com>

	* src/tracker-indexer/tracker-indexer-db.c
	(tracker_db_create_service): Allow modules to specify a custom dirname
	and basename for the service.
	* src/tracker-indexer/modules/evolution.c: And use it for local mail.
	IMAP has yet to come.

2008-06-27  Ivan Frade  <ivan.frade@nokia.com>

	* test/libtracker-common/tracker-type-utils-test.c:
	(test_date_to_string): now it doesnt depend on the timezone of the 
	tester.
	
2008-06-27  Philip Van Hoof  <pvanhoof@gnome.org>

	* tests/libtracker-db/union-performance.c: Added a performance test
	for a UNION query structure vs. views that me and ottela want to 
	start using for certain Xesam related queries

2008-06-27  Philip Van Hoof  <pvanhoof@gnome.org>

	* src/trackerd/tracker-xesam-query.c:
	* src/trackerd/tracker-rdf-query.c:

	Incorrect queries (user input) should never crash the service
	(critical assertions)
